opam-version: "2.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/deepmarker/ocaml-dataframe"
license: "ISC"
dev-repo: "git+https://github.com/deepmarker/ocaml-dataframe.git"
bug-reports: "https://github.com/deepmarker/ocaml-dataframe/issues"
doc: "https://deepmarker.github.io/ocaml-dataframe/doc"
tags: ["pandas" "timeseries" "table"]
depends: [
  "dune" {>= "2.3.1"}
  "ocaml" {>= "4.08.0"}
]
build:[ "dune" "build" "-p" name "-j" jobs ]
run-test:[ "dune" "runtest" "-p" name "-j" jobs ]
synopsis: "Library providing a row API from a column list structure"
url {
  src: "git+https://github.com/deepmarker/ocaml-dataframe"
}
